Fix add button alignment issue.
RT #690

--- a/frontend/src/components/common/smart/commentsDrawer/commentsDrawer.scss
+++ b/frontend/src/components/common/smart/commentsDrawer/commentsDrawer.scss
@@ -21,12 +21,12 @@
   .Mui-focused {
     background-color: #fff;
   }
-  .css-1laqsz7-MuiInputAdornment-root {
+  .MuiInputAdornment-root {
     height: unset;
     max-height: unset;
     align-self: flex-end;
   }
-  .AddCommentBtn {
+  .AddSystemCommentBtn {
     width: 78px;
     padding: 0;
     border-radius: 6px;
